--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,29 +31,50 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    const fifteen = inventors.filter(item => item.year >= 1500 && item.year <= 1599);
+    console.log(fifteen);
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const twoNames = inventors.map(item => `${item.first} ${item.last}`);
+    console.log(twoNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const sorted = inventors.sort((a,b) => a.year - b.year);
+    console.log(sorted);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
-
+    const totalYears = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    }, 0);
+    console.log(totalYears);
     // 5. Sort the inventors by years lived
-
+    const sortedByYearsLived = inventors.sort((a,b) => (a.passed - a.year) - (b.passed - b.year));
+    console.table(sortedByYearsLived.reverse());
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+    const sortedNames = people.sort((a,b) => {
+      const [aLast, aFirst] = a.split(", ");
+      const [bLast, bFirst] = b.split(", ");
+      return aLast - bLast;
+    });
+    console.log(sortedNames);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-
+    const vehiclesTotal = data.reduce((acc, item) => {
+      if(!acc[item]){
+        acc[item] = 0;
+      }
+      acc[item] += 1;
+      return acc;
+    }, {});
+    console.log(vehiclesTotal);
   </script>
 </body>
 </html>
