--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,15 +27,20 @@
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
-
+    const currentYear = new Date().getFullYear();
+    people.some(person => (currentYear - person.year) >= 51) ? console.log("Yes") : console.log("No");
+    people.every(person => (currentYear - person.year) >= 6) ? console.log("Yes") : console.log("No");
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const comment = comments.find(comment => comment.id === 823423);
+    console.log(comment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
-
+    const commentId = comments.findIndex(comment => comment.id === 823423);
+    console.log(commentId);
   </script>
 </body>
 </html>
