--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,19 +18,20 @@
     }
 
     // Regular
-
+    console.log("Hello");
     // Interpolated
-
+    console.log("Hello, my name is %s", 'Ivo')
     // Styled
+    console.log('%cTesting the styling on console.log messages', 'font-size: 20px; background:red;');
 
     // warning!
-
+    console.warn("OH NO");
     // Error :|
-
+    console.error("dead");
     // Info
-
+    console.info('fun fact');
     // Testing
-
+    console.assert(1 === 2, "No, that's wrong");
     // clearing
 
     // Viewing DOM Elements
