Finished 2nd challenge

--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <!-- testing -->
+    <!-- testing again -->
     <div class="clock">
       <div class="clock-face">
         <div class="hand hour-hand"></div>
