--- a/14 - JavaScript References VS Copying/index-START.html
+++ b/14 - JavaScript References VS Copying/index-START.html
@@ -8,16 +8,22 @@
 
   <script>
     // start with strings, numbers and booleans
+    let age = 100;
+    let age2 = age;
+    console.log(age, age2);
+    age = 200;
+    console.log(age, age2);
 
     // Let's say we have an array
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
     // and we want to make a copy of it.
-
+    const team = players;
+    console.log(players,team);
     // You might think we can just do something like this:
-
+    team[2] = "Ivo";
     // however what happens when we update that array?
-
+    console.log(players,team);
     // now here is the problem!
 
     // oh no - we have edited the original array too!
@@ -27,13 +33,13 @@
     // So, how do we fix this? We take a copy instead!
 
     // one way
-
+    const team2 = players.slice();
     // or create a new array and concat the old one in
-
+    const team3 = [].concat(players);
     // or use the new ES6 Spread
-
+    const team4 = [...players];
     // now when we update it, the original one isn't changed
-
+    const team5 = Array.from(players);
     // The same thing goes for objects, let's say we have a person object
 
     // with Objects
@@ -49,7 +55,23 @@
     // We will hopefully soon see the object ...spread
 
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+    const wes = {
+      name: 'Wes',
+      age: 100,
+      social: {
+        twitter: '@wesbos',
+        facebook: 'wesbos.developer'
+      }
+    };
 
+    console.clear();
+    console.log(wes);
+
+    const dev = Object.assign({}, wes);
+    // Poor man's way to deep clone an Object
+    // Make the original object into a JSON string and then parse it back to an Object again
+    // Might cause performance issues
+    const dev2 = JSON.parse(JSON.stringify(wes));
   </script>
 
 </body>
