Finished 17th challenge

--- a/17 - Sort Without Articles/index-START.html
+++ b/17 - Sort Without Articles/index-START.html
@@ -26,12 +26,12 @@
       padding: 0;
       box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.05);
     }
-    
+
     #bands li {
       border-bottom: 1px solid #efefef;
       padding: 20px;
     }
-    
+
     #bands li:last-child {
       border-bottom: 0;
     }
@@ -48,6 +48,21 @@
 <script>
 const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
 
+function strip(bandName){
+  return bandName.replace(/^(a |the |an)/i, '').trim();
+}
+const sorted = bands.sort((a,b) => {
+  return strip(a) > strip(b) ? 1 : -1;
+  // if (strip(a) > strip(b)){
+  //   return 1;
+  // } else {
+  //   return -1;
+  // }
+});
+
+document.querySelector('#bands').innerHTML = sorted.map(band => `<li>${band}</li>`).join('');
+
+console.table(sorted);
 
 </script>
 
