Finished 18th challenge

--- a/18 - Adding Up Times with Reduce/index-START.html
+++ b/18 - Adding Up Times with Reduce/index-START.html
@@ -182,6 +182,25 @@
     </li>
   </ul>
 <script>
+  // use the spread operator to make the NodeList into an array
+  const timeNodes = [...document.querySelectorAll('[data-time]')];
+  const seconds = timeNodes
+    .map(node => node.dataset.time)
+    .map(timeCode => {
+      const [mins, secs] = timeCode.split(':').map(parseFloat); // ES6 destructuring
+      return (mins*60) + secs;
+      console.log(mins, secs);
+    }).reduce((total, seconds) => total + seconds);
+
+  let secondsLeft = seconds;
+
+  const hours = Math.floor(secondsLeft / 3600);
+  secondsLeft = secondsLeft % 3600;
+
+  const mins = Math.floor(secondsLeft / 60);
+  secondsLeft = secondsLeft % 60;
+
+  console.log(hours, mins, secondsLeft);
 </script>
 </body>
 </html>
