Finished 20th challenge

--- a/20 - Speech Detection/index-START.html
+++ b/20 - Speech Detection/index-START.html
@@ -12,6 +12,31 @@
 <script>
   window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 
+  const recognition = new SpeechRecognition();
+  recognition.interimResults = true; // display in real time as opposed to waiting for you to stop speaking
+
+  let p = document.createElement('p');
+  const words = document.querySelector('.words');
+  words.appendChild(p);
+
+  recognition.addEventListener('result', e => {
+    //console.log(e);
+    const transcript = Array.from(e.results)
+      .map(result => result[0])
+      .map(result => result.transcript).join('');
+
+      p.textContent = transcript;
+
+      if(e.results[0].isFinal){
+        p = document.createElement('p');
+        words.appendChild(p);
+      }
+
+    console.log(transcript);
+  });
+  recognition.addEventListener('end', recognition.start);
+
+  recognition.start();
 
 </script>
 
@@ -40,7 +65,7 @@
       position: relative;
       line-height: 3rem;
     }
-    
+
     p {
       margin: 0 0 3rem;
     }
