--- a/21 - Geolocation/index-START.html
+++ b/21 - Geolocation/index-START.html
@@ -12,13 +12,14 @@
   <h1 class="speed">
     <span class="speed-value">0</span>
     <span class="units">KM/H</span>
+    <span class="coords">KM/H</span>
   </h1>
 
   <style>
     html {
       font-size: 100px;
     }
-    
+
     body {
       margin: 0;
       font-family: sans-serif;
