--- a/30 - Whack A Mole/index-START.html
+++ b/30 - Whack A Mole/index-START.html
@@ -36,7 +36,55 @@
   const holes = document.querySelectorAll('.hole');
   const scoreBoard = document.querySelector('.score');
   const moles = document.querySelectorAll('.mole');
+  let lastHole;
+  let timeUp = false;
+  let score = 0;
 
+  function randTime(min, max){
+  	return Math.round(Math.random() * (max - min) + min);
+  }
+
+  function randomHole(holes){
+  	const hole = holes[Math.floor(Math.random() * holes.length)];
+  	// console.log(hole);
+  	// if the currently chose hole is the same as the previous one
+  	// run the function again so we get a different hole eventually
+  	if(hole === lastHole){
+  		return randomHole(holes);
+  	}
+  	lastHole = hole;
+  	return hole;
+  }
+
+  function peep(){
+  	const time = randTime(200, 1000);
+  	const hole = randomHole(holes);
+
+  	hole.classList.add('up');
+  	setTimeout(() => {
+  		hole.classList.remove('up');
+  		if(!timeUp){
+  			peep();
+  		}
+  	}, time);
+  }
+
+  function startGame(){
+  	scoreBoard.textContent = 0;
+  	timeUp = false;
+  	score = 0;
+  	peep();
+  	setTimeout(() => timeUp = true, 10000);
+  }
+
+  function bonk(e){
+  	if(!e.isTrusted) return;
+  	score++;
+  	this.classList.remove('up');
+  	scoreBoard.textContent = score;
+  }
+
+  moles.forEach(mole => mole.addEventListener('click', bonk));
 </script>
 </body>
 </html>
